namespace/llm/optillm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: optillm
  namespace: llm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: optillm
  template:
    metadata:
      labels:
        app: optillm
    spec:
      containers:
        - name: optillm
          image: ghcr.io/codelion/optillm:0.1.12-proxy@sha256:225d5c3a38e7fa2159e5722b15e2b7222cf9bfd90e487ed525c5be81113eff03
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "2"
              memory: "4Gi"
